# IBL-widefield-to-nwb

./: README.md  make_env.yml  pyproject.toml
.github/workflows/: test-install.yml
src/ibl_widefield_to_nwb/widefield2025/: __init__.py  behaviorinterface.py  conversion_notes.md  convert_session.py  ibl_widefield_imagingextractor.py  ibl_widefield_imaginginterface.py  ibl_widefield_segmentationextractor.py  ibl_widefield_segmentationinterface.py  metadata.yaml  nwbconverter.py
src/ibl_widefield_to_nwb/widefield2025/_metadata/: widefield_DAQ_metadata.yaml  widefield_general_metadata.yaml  widefield_nidq_metadata.yaml  widefield_ophys_metadata.yaml
src/ibl_widefield_to_nwb/widefield2025/conversion/: __init__.py  behavior.py  build_cache.py  download.py  processed.py  raw.py
src/ibl_widefield_to_nwb/widefield2025/datainterfaces/: __init__.py  _base_ibl_interface.py  _ibl_nidq_interface.py  _ibl_widefield_DAQ_interface.py  _ibl_widefield_SVDextractor.py  _ibl_widefield_SVDinterface.py  _ibl_widefield_imagingextractor.py  _ibl_widefield_imaginginterface.py  _ibl_widefield_landmarksinterface.py  _ibl_widefield_segmentationextractor.py  _ibl_widefield_segmentationinterface.py
src/ibl_widefield_to_nwb/widefield2025/metadata/: ophys_metadata.yaml  widefield_nidq_metadata.yaml  widefield_ophys_metadata.yaml
src/ibl_widefield_to_nwb/widefield2025/tutorials/: anatomical_localization.ipynb  landmarks.ipynb  processed.ipynb  raw.ipynb
src/ibl_widefield_to_nwb/widefield2025/utils/: __init__.py  _nidq_wiring.py  _widefield_times.py
