[project]
name = "IBL-widefield-to-nwb"
version = "0.0.1"
description = "NWB conversion scripts, functions, and classes for IBL-widefield  conversion"
readme = "README.md"
authors = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
maintainers = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
  "neuroconv",
  "nwbinspector",
]

[project.urls]
Repository="https://github.com/catalystneuro/IBL-widefield-to-nwb"

[project.optional-dependencies]
widefield2025 = [
  "neuroconv==0.9.0",
  "roiextractors==0.7.2",
  "ndx-spatial-transformation @ git+https://github.com/catalystneuro/ndx-spatial-transformation.git@main", # TODO: update to stable release once pushed to PyPI
  "ndx-anatomical-localization @ git+https://github.com/h-mayorquin/ndx-anatomical-localization.git@add_canonical_ccf_space", # TODO: change from fork to main repo when merged
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "*.yaml",
  "*.yml",
  "*.json",
]  # This includes the yaml (usually metadata) and any schemas you might need on both the sdist and wheel

[tool.hatch.build.targets.wheel]
packages = ["src/ibl_widefield_to_nwb"]

[tool.hatch.build.targets.sdist]
packages = ["src/ibl_widefield_to_nwb"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.md
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.codespell]
skip = '.git*,*.pdf,*.css'
check-hidden = true
ignore-words-list = 'assertin'

[tool.ruff]

[tool.ruff.lint]
select = [
    "F401",  # Unused import
    "I",  # All isort rules
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["ibl_widefield_to_nwb"]
